--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/spring-reddit-clone?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=padmin
 spring.datasource.password=Windo@1234
+
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.initialize=true 
+spring.datasource.initialize=true 
 spring.jpa.show-sql=true
+####video length: 10:18
 ############# Mail Properties ###########################################
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=25
